--- a/src/SarifWeb/Content/ImageViewer.css
+++ b/src/SarifWeb/Content/ImageViewer.css
@@ -2,8 +2,7 @@
     align-items: center;
     animation-name: fadeIn;
     animation-duration: 0.2s;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: #000;
     display: none;
     flex-direction: column;
     justify-content: center;
@@ -18,15 +17,14 @@
 #imageViewerDialog {
     animation-name: reveal;
     animation-duration: 0.2s;
-    border: 4px solid #DDDDDD;
-    border-radius: var(--main-border-radius);
+    border: 4px solid ActiveBorder;
     display: flex;
     flex-direction: column;
     position: absolute;
 }
 
 #imageViewerTitleBar {
-    background-color: #DDDDDD;
+    background-color: ActiveBorder;
     display: flex;
     padding: 3px 5px 5px 5px;
 }
@@ -42,13 +40,13 @@
 }
 
 #imageViewerCloseGlyph {
-    background-color: #FFCC00;
+    background-color: #000;
     border: solid 1px #000;
     border-radius: 3px;
-    color: #000;
+    color: #FFF;
     cursor: pointer;
     flex: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 11px;
     padding: 3px 6px;
     text-wrap: none;
