--- a/src/SarifWeb/Content/Main.css
+++ b/src/SarifWeb/Content/Main.css
@@ -22,6 +22,11 @@ a:hover, a:active {
 }
 
 button {
+    background: #DADADA;
+    background: -moz-linear-gradient(top, #F2F2F2 0%, #F2F2F2 50%, #DADADA 100%);
+    background: -webkit-linear-gradient(top, #F2F2F2 0%, #F2F2F2 50%, #DADADA 100%);
+    background-image: linear-gradient(to bottom, #F2F2F2 0%, #F2F2F2 50%, #DADADA 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#F2F2F2", endColorstr="#DADADA", GradientType=0);
     border: 2px solid #D2D2D2;
 }
 
@@ -107,7 +112,11 @@ header > div {
 
 #hero {
     align-items: center;
-    background-color: #4D4D4D;
+    background: #4D4D4D;
+    background: -moz-linear-gradient(top, #373737 0%, #4D4D4D 40%, #4D4D4D 100%);
+    background: -webkit-linear-gradient(top, #373737 0%, #4D4D4D 40%, #4D4D4D 100%);
+    background-image: linear-gradient(to bottom, #373737 0%, #4D4D4D 40%, #4D4D4D 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#373737", endColorstr="#4D4D4D", GradientType=0);
     display: flex;
     height: 280px;
 }
@@ -297,10 +306,9 @@ header > div {
 
 .path-line-container {
     align-self: stretch;
-    flex: 1 24px;
+    flex: 1 0 24px;
     margin-left: 20px;
     margin-right: 20px;
-    min-width: 24px;
     width: 100%;
 }
 
@@ -342,7 +350,7 @@ line.stroke-2x {
 }
 
 .tools-item-other-label {
-    flex: 0 120px;
+    flex: 1;
     display: flex;
     margin-right: 20px;
 }
@@ -352,7 +360,7 @@ line.stroke-2x {
 }
 
 .tools-item-description {
-    flex: 1 220px;
+    flex: 1 0 220px;
     font-family: var(--content-font-family);
     font-size: 13px;
     line-height: 17px;
@@ -427,7 +435,11 @@ line.stroke-2x {
 
 footer {
     align-items: center;
-    background-color: #4D4D4D;
+    background: #4D4D4D;
+    background: -moz-linear-gradient(top, #4D4D4D 0%, #4D4D4D 60%, #373737 100%);
+    background: -webkit-linear-gradient(top, #4D4D4D 0%, #4D4D4D 60%, #373737 100%);
+    background-image: linear-gradient(to bottom, #4D4D4D 0%, #4D4D4D 60%, #373737 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4D4D4D", endColorstr="#373737", GradientType=0);
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
     color: #FFFFFF;
@@ -441,4 +453,25 @@ footer {
 footer p {
     margin: 0;
     text-align: center;
+}
+
+/* ImageViewer overrides */
+#imageViewer {
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+#imageViewerDialog {
+    border: 4px solid #DDD;
+    border-radius: var(--main-border-radius);
+}
+
+#imageViewerTitleBar {
+    background-color: #DDD;
+}
+
+#imageViewerCloseGlyph {
+    background-color: #FFCC00;
+    color: #000;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 10px;
 }
