--- a/src/SarifWeb/Content/ImageViewer.css
+++ b/src/SarifWeb/Content/ImageViewer.css
@@ -39,7 +39,7 @@
     text-align: center;
 }
 
-#imageViewerCloseGlyph {
+#imageViewerCloseButton {
     background-color: #000;
     border: solid 1px #000;
     border-radius: 3px;
