Update collaborator list

--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -47,22 +47,15 @@
     <a name="Collaborators"></a>
     <div id="collabSectionTitle" role="heading" class="content-section-title">Collaborators</div>
     <div class="content-section-text content-section-description">
-        The SARIF project is supported by a large group of industry contributors, including quick brown foxes and lazy dogs.
+        The SARIF project is supported by a large group of industry contributors.
     </div>
     <div id="collabSectionButtons" role="list" aria-labelledby="collabSectionTitle">
-        <img role="listitem" aria-label="3M" src="~/Images/Logos/3M.png" alt="3M" />
-        <img role="listitem" aria-label="Adobe Systems" src="~/Images/Logos/Adobe.png" alt="Adobe" />
-        <img role="listitem" aria-label="Amazon" src="~/Images/Logos/Amazon.png" alt="Amazon" />
-        <img role="listitem" aria-label="BMW" src="~/Images/Logos/BMW.png" alt="BMW" />
-        <img role="listitem" aria-label="Dell" src="~/Images/Logos/Dell.png" alt="Dell" />
-        <img role="listitem" aria-label="EMC2" src="~/Images/Logos/EMC2.png" alt="EMC2" />
-        <img role="listitem" aria-label="Expedia" src="~/Images/Logos/Expedia.png" alt="Expedia" />
-        <img role="listitem" aria-label="Hewlett Packard Enterprise" src="~/Images/Logos/HPE.png" alt="Hewlett Packard Enterprise" />
+        <img role="listitem" aria-label="Kestrel Technology" src="~/Images/Logos/KestrelTechnology.png" alt="Kestrel Technology" />
+        <img role="listitem" aria-label="GrammaTech" src="~/Images/Logos/GrammaTech.png" alt="GrammaTech" />
         <img role="listitem" aria-label="Micro Focus" src="~/Images/Logos/MicroFocus.png" alt="Micro Focus" />
         <img role="listitem" aria-label="Microsoft" src="~/Images/Logos/Microsoft.png" alt="Microsoft" />
         <img role="listitem" aria-label="Semmle" src="~/Images/Logos/Semmle.png" alt="Semmle" />
-        <img role="listitem" aria-label="Visa" src="~/Images/Logos/Visa.png" alt="Visa" />
-        <img role="listitem" aria-label="Zillow" src="~/Images/Logos/Zillow.png" alt="Zillow" />
+        <img role="listitem" aria-label="SWAMP" src="~/Images/Logos/SWAMP.png" alt="SWAMP" />
     </div>
 </section>
 
