--- a/src/SarifWeb/Views/Shared/_Layout.cshtml
+++ b/src/SarifWeb/Views/Shared/_Layout.cshtml
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
-    <link href="~/Content/Main.css" rel="stylesheet" />
+    <link href="~/Content/Frame.css" rel="stylesheet" />
+    <link href="~/Content/Frame-Media-Mobile.css" rel="stylesheet" media="only screen and (min-width: 320px) and (max-width: 480px)" />
+    <link href="~/Content/Frame-Media-Mobile-Landscape.css" rel="stylesheet" media="only screen and (min-width: 481px) and (max-width: 767px)" />
+    <link href="~/Content/Frame-Media-Tablet.css" rel="stylesheet" media="only screen and (min-width: 768px) and (max-width: 1024px)" />
+    <link href="~/Content/Frame-Media-Tablet-Landscape.css" rel="stylesheet" media="only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape)" />
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
