--- a/src/SarifWeb/Content/Frame-Media-Mobile.css
+++ b/src/SarifWeb/Content/Frame-Media-Mobile.css
@@ -32,6 +32,10 @@ header {
     display: none;
 }
 
+.header-nav-item {
+    font-size: 12px;
+}
+
 #headerNavValidator {
     margin-right: 15px;
 }
