Include Home.css in validator page (temporary)

--- a/src/SarifWeb/Views/ValidationUi/Index.cshtml
+++ b/src/SarifWeb/Views/ValidationUi/Index.cshtml
@@ -2,6 +2,8 @@
     ViewBag.Title = "SARIF Log File Validator";
 }
 
+<link href="~/Content/Home.css" rel="stylesheet" />
+
 <section id="dropSection" class="content-section gray-section">
     <div class="content-section-title">@ViewBag.Title</div>
 
