--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
             <button id="specSectionButtonAsk" role="button" href="https://github.com/oasis-tcs/sarif-spec/issues/new" target="_blank" class="content-button sarifweb-button gray-section">Ask a question</button>
         </div>
         <div id="specSectionButtons2">
-            <button id="specSectionButtonView" role="button" href="#Viewers" target="_self" class="content-button sarifweb-button gray-section">
+            <button id="specSectionButtonView" role="button" href="~/Validation" target="_self" class="content-button sarifweb-button gray-section">
                 View and validate your SARIF files
                 <p class="button-subtitle">
                     Upload and explore your SARIF file or
