--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -70,7 +70,7 @@
     <div class="content-section-text content-section-description">
         A collection of tools offering facilities for producing, consuming, and validating files in the SARIF format.
         <br />
-        The source code is in the <b>SARIF SDK GitHub repo</b>. We welcome your contributions!
+        The source code is in the <a href="https://github.com/Microsoft/sarif-sdk" target="_blank" class="strong-link">SARIF SDK GitHub repo</a>. We welcome your contributions!
     </div>
     <div id="toolsSectionContent">
         <div id="toolsSectionContentCsharp">
