--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -124,7 +124,7 @@
                 </div>
                 <div role="listitem">
                     <div class="tools-item-description"><b>Interop</b> - Library that enables Visual Studio extensions to easily consume services exposed by the SARIF Viewer for VS.</div>
-                    <button id="toolsItemInteropLink" role="button" aria-label="View SARIF Viewer interop library NuGet package" href="https://www.nuget.org/packages/Sarif.Viewer.Interop/2.0.0-csd.1.0.2" target="_blank" class="tools-item-button sarifweb-button">
+                    <button id="toolsItemInteropLink" role="button" aria-label="View SARIF Viewer interop library NuGet package" href="https://www.nuget.org/packages/Sarif.Viewer.Interop/2.0.0-csd.1.0.2" target="_blank" class="tools-item-button sarifweb-button" disabled>
                         <div class="tools-item-button-icon">
                             <img src="~/Images/Nuget.png" />
                         </div>
