--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
     <a name="Collaborators"></a>
     <div id="collabSectionTitle" role="heading" class="content-section-title">Collaborators</div>
     <div class="content-section-text content-section-description">
-        The SARIF project is supported by a large group of industry contributors.
+        The SARIF project is supported by a group of industry contributors.
     </div>
     <div id="collabSectionButtons" role="list" aria-labelledby="collabSectionTitle">
         <img role="listitem" aria-label="Kestrel Technology" src="~/Images/Logos/KestrelTechnology.png" alt="Kestrel Technology" />
