--- a/src/SarifWeb/Views/Home/Index.cshtml
+++ b/src/SarifWeb/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
     <div id="specSectionTitle" role="heading" class="content-section-title">Specification</div>
     <div class="content-section-text content-section-description">
         The <b>Static Analysis Results Interchange Format (SARIF)</b> specification is currently being
-        standardized by <b>OASIS</b> in the <b>OASIS SARIF Technical Committee</b>. The information and tools
+        standardized by <a href="https://www.oasis-open.org/" target="_blank" class="strong-link">OASIS</a> in the <a href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=sarif" target="_blank" class="strong-link">OASIS SARIF Technical Committee</a>. The information and tools
         on this web site track the standard as it evolves to its final form.
     </div>
     <div id="specSectionButtons">
